# RapidSFM

./: .gitignore  .gitmodules  Builder.cpp  Builder.cu  Builder.h  BuilderDbgMethods.cpp  BuilderMethods.cpp  CMakeLists.txt  Config.h  HandleGenerator.h  IModelViewerPlugin.h  Image.cpp  Image.h  ImagePair.cpp  ImagePair.h  README.md  RansacMatchFilter.cpp  RansacMatchFilter.cu  RansacMatchFilter.cuh  RansacMatchFilter.h  RapidSFM.cpp  RapidSFM.h  Scheduler.cpp  Scheduler.h  SfmUtils.cpp  SfmUtils.h  SfmUtils.hpp  SinglePoseOptimizer.h  Types.cpp  Types.h  Types.hpp  TypesExt.hpp  bruteForceMatch.cpp  bruteForceMatch.cu  bruteForceMatch.cuh  bruteForceMatch.h  bruteForceMatchIMMA.cu  bruteForceMatcher.cpp  bruteForceMatcher.h  converter.cpp  (+13 more)
casHash/: accumulateDesc.cu  buildBuckets.cu  cascadeHash.h  computeHash.cu  findBestMatch.cu  matchWithoutRemap.cu
legacy/: PropagationMatchFilter.cpp  PropagationMatchFilter.h  aligned_array.hpp  geometry.cpp  geometry.hpp  rt_optimiser.cpp  rt_optimiser.hpp  rt_optimiser.py  rt_optimiser_helper.hpp
models/: DebugModelViewer.cpp  DebugModelViewer.h  DefaultModel.cpp  DefaultModel.h  GlobalModel.h  IncreModel.cpp  IncreModel.h  IncreModel.hpp  IncreModelMethods.cpp  ModelBase.h  ModelBuilder.cpp  ModelBuilder.h  PnPOptimizer.cpp  PnPOptimizer.h  rbaUtils.h
parser/: parser.cpp  parser.h
profiles/: default.yaml  input.yaml
rsfm/: rsfm.cpp  worker.cpp
scripts/: parsePOS.py
test/: bruteForceMatchKernelTest.cpp  casHashAccumulateDescTest.cpp  casHashBuildBucketsTest.cpp  casHashComputeHashTest.cpp  casHashFindBestMatchTest.cpp  geometryTest.cpp
tools/: rename.sh
